; ModuleID = '/home/carl/AnghaBench/php-src/Zend/extr_zend_compile.c_zend_check_already_in_use.c'
source_filename = "/home/carl/AnghaBench/php-src/Zend/extr_zend_compile.c_zend_check_already_in_use.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@E_COMPILE_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [57 x i8] c"Cannot use%s %s as %s because the name is already in use\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*, i32*, i32*)* @zend_check_already_in_use to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zend_check_already_in_use(i32 %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = load i32*, i32** %8, align 8
  %11 = call i64 @zend_string_equals_ci(i32* %9, i32* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %4
  br label %23

14:                                               ; preds = %4
  %15 = load i32, i32* @E_COMPILE_ERROR, align 4
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @zend_get_use_type_str(i32 %16)
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @ZSTR_VAL(i32* %18)
  %20 = load i32*, i32** %7, align 8
  %21 = call i32 @ZSTR_VAL(i32* %20)
  %22 = call i32 @zend_error_noreturn(i32 %15, i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str, i64 0, i64 0), i32 %17, i32 %19, i32 %21)
  br label %23

23:                                               ; preds = %14, %13
  ret void
}

declare dso_local i64 @zend_string_equals_ci(i32*, i32*) #1

declare dso_local i32 @zend_error_noreturn(i32, i8*, i32, i32, i32) #1

declare dso_local i32 @zend_get_use_type_str(i32) #1

declare dso_local i32 @ZSTR_VAL(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
